--- a/src/index.html
+++ b/src/index.html
@@ -14,5 +14,37 @@
       <div class="emoji mb-6">💣🤯💥</div>
       <button class="button">Boom?</button>
     </div>
-  </body>
+
+    <form action="">
+      <input 
+      type="text" 
+      name="ccname"
+      autocomplete="name"
+      class="input"
+      />
+
+      <input 
+      type="text" 
+      name="cardnumber"
+      autocomplete="cc-number"
+      class="input"
+      />
+
+      <input 
+      type="text" 
+      name="cvc"
+      autocomplete="csc"
+      class="input"
+      />
+
+      <input 
+      type="text" 
+      name="cc-exp"
+      autocomplete="cc-exp"
+      class="input"
+      />
+
+    </form>
+
+      </body>
 </html>
