--- a/src/index.html
+++ b/src/index.html
@@ -24,21 +24,21 @@
       />
 
       <input 
-      type="text" 
+      type="number" 
       name="cardnumber"
       autocomplete="cc-number"
       class="input"
       />
 
       <input 
-      type="text" 
+      type="number" 
       name="cvc"
       autocomplete="csc"
       class="input"
       />
 
       <input 
-      type="text" 
+      type="number" 
       name="cc-exp"
       autocomplete="cc-exp"
       class="input"
